--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -31,7 +31,22 @@ h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
 }
+
 p {
   margin-bottom: 1rem;
   line-height: 1.5;
+}
+
+@media (max-width: 40rem) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1rem;
+  }
+
+  p {
+    font-size: 0.9rem;
+  }
 }
